Programmed path finding algorithm

--- a/Pirates/Assembly-CSharp.csproj
+++ b/Pirates/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Scripts\Grid.cs" />
      <Compile Include="Assets\Scripts\IslandProperties.cs" />
      <Compile Include="Assets\Scripts\Node.cs" />
+     <Compile Include="Assets\Scripts\PathFinding.cs" />
      <Compile Include="Assets\Scripts\Ship Scripts\BaseShip.cs" />
      <Compile Include="Assets\Scripts\Ship Scripts\ShipMovement.cs" />
  <Reference Include="UnityEngine.UI">
