Player can now traverse nodes and travel around islands

--- a/Pirates/Assembly-CSharp.csproj
+++ b/Pirates/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\PathFinding.cs" />
      <Compile Include="Assets\Scripts\Ship Scripts\BaseShip.cs" />
      <Compile Include="Assets\Scripts\Ship Scripts\ShipMovement.cs" />
+     <Compile Include="Assets\Scripts\Ship Scripts\ShipSeeker.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
